# coffee-beans-voice-agent

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: test_agent.ipynb
src/: __init__.py  config.py  graph.py  handlers.py  knowledge.py  main.py  prompts.py  services.py  state.py
tests/: chat_with_agent.py  demo.py  test_phase2.py  test_stt.py  test_tts.py
